--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>Shake</title>
+	<style>
+		*{
+			margin:0;
+			padding: 0;
+		}
+		html,body{
+			width: 100%;
+			height: 100%;
+		}
+		.views{
+			position: relative;
+			width: 100%;
+
+		}
+		.views img{
+			position: absolute;
+			width: 254px;
+			height: 244px;
+			top: 50%;
+			left: 50%;
+			margin-top: -122px;
+			margin-left: -127px;
+		}
+	</style>
 </head>
 <body>
 	<div class="views">
-		
+		<img src="images/shakehande.png">
 	</div>
 </body>
 </html>
