--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		.views{
 			position: relative;
 			width: 100%;
-
+			height: 100%;
 		}
 		.views img{
 			position: absolute;
@@ -27,6 +27,24 @@
 			margin-top: -122px;
 			margin-left: -127px;
 		}
+		.horseamimal{transform: rotate(0deg);-webkit-transform: rotate(0deg); transform-origin:bottom center;
+    -webkit-transform-origin: bottom center;-webkit-animation:swinging 5s ease-in-out 0s infinite;
+    -moz-animation:swinging 5s ease-in-out 0s infinite;
+    animation:swinging 5s ease-in-out 0s infinite;}
+	@-webkit-keyframes swinging{
+		0% { -webkit-transform: rotate(0); }
+		5% { -webkit-transform: rotate(30deg); }
+		10% { -webkit-transform: rotate(-27deg); }
+	    15% { -webkit-transform: rotate(24deg); }
+	    20% { -webkit-transform: rotate(-21deg); }
+	    25% { -webkit-transform: rotate(18deg); }
+	    30% { -webkit-transform: rotate(-15deg); }
+	    35% { -webkit-transform: rotate(12deg); }
+	    40% { -webkit-transform: rotate(-9deg); }
+	    45% { -webkit-transform: rotate(6deg); }
+	    50% { -webkit-transform: rotate(0); }
+	    100% { -webkit-transform: rotate(0); }
+	}
 	</style>
 </head>
 <body>
@@ -35,3 +53,36 @@
 	</div>
 </body>
 </html>
+<script>
+	var dom = document.getElementByClassName('horseamimal')[0];
+	if (window.DeviceMotionEvent) {
+        window.addEventListener('devicemotion', deviceMotionHandler, false);
+    } else {
+        alert('not support mobile event');
+    }
+	var SHAKE_THRESHOLD = 800;
+	var last_update = 0;
+	var x, y, z, last_x, last_y, last_z;       
+	function deviceMotionHandler(eventData) {        
+	  var acceleration =eventData.accelerationIncludingGravity;
+	  var curTime = new Date().getTime();       
+	  if ((curTime - last_update)> 300) {                
+	      var diffTime = curTime -last_update;
+	      last_update = curTime;       
+	      x = acceleration.x;
+	      y = acceleration.y;
+	      z = acceleration.z;       
+	      var speed = Math.abs(x +y + z - last_x - last_y - last_z) / diffTime * 10000;          
+	      if (speed > SHAKE_THRESHOLD) {
+	          // alert("shaked!");
+	          dom.setAttribute('class','horseamimal');
+	          setTimeout(function(){
+	          	dom.removeAttribute('class');
+	          },3000);
+	      }
+	      last_x = x;
+	      last_y = y;
+	      last_z = z;
+	    }
+	} 
+</script>
