--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </body>
 </html>
 <script>
-	var dom = document.getElementByClassName('horseamimal')[0];
+	var dom = document.getElementByTagName('img')[0];
 	if (window.DeviceMotionEvent) {
         window.addEventListener('devicemotion', deviceMotionHandler, false);
     } else {
